--- a/tui-scrollbar/Cargo.toml
+++ b/tui-scrollbar/Cargo.toml
@@ -19,12 +19,23 @@ cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-crossterm = { workspace = true, optional = true }
+crossterm_0_28 = { version = "0.28", package = "crossterm", optional = true }
+crossterm_0_29 = { version = "0.29", package = "crossterm", optional = true }
 document-features.workspace = true
 ratatui-core.workspace = true
 
 [features]
-crossterm = ["dep:crossterm"]
+default = []
+
+## Enables `ScrollBar::handle_mouse_event` for crossterm mouse events (latest supported version,
+## currently `crossterm` 0.29).
+crossterm = ["crossterm_0_29"]
+
+## Enables `ScrollBar::handle_mouse_event` using `crossterm` 0.28.
+crossterm_0_28 = ["dep:crossterm_0_28"]
+
+## Enables `ScrollBar::handle_mouse_event` using `crossterm` 0.29 (preferred when multiple are enabled).
+crossterm_0_29 = ["dep:crossterm_0_29"]
 
 [dev-dependencies]
 color-eyre.workspace = true
