feat(scrollbar): support crossterm 0.28
Add versioned crossterm feature flags and re-export the selected version as
`tui_scrollbar::crossterm`.

Add CI checks for the feature matrix and a docs.rs-style build.

--- a/.github/workflows/tui-scrollbar.yml
+++ b/.github/workflows/tui-scrollbar.yml
@@ -1,4 +1,5 @@
 name: tui-scrollbar (crossterm matrix)
+
 permissions:
   contents: read
 
@@ -49,4 +50,4 @@ jobs:
         with:
           tool: cargo-docs-rs
       - name: Cargo doc (docsrs)
-        run: cargo docs-rs -p tui-scrollbar --all-features --no-deps --locked
+        run: cargo docs-rs -p tui-scrollbar --locked
